5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1595_1017.log
== SUBMITION (2019-03-26 22:36:11) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sen(t1)).sen(t2)+cos(t1)*cos(t2)*cos(g1-g2)
-- EXECUTION TIME:
0.288194
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 8, in <module>
    d = r*acos(sen(t1)).sen(t2)+cos(t1)*cos(t2)*cos(g1-g2)
NameError: name 'sen' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 22:36:15) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sen(t1)).sen(t2)+cos(t1)*cos(t2)*cos(g1-g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    d = r*acos(sen(t1)).sen(t2)+cos(t1)*cos(t2)*cos(g1-g2)
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:37:20) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sen(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
-- EXECUTION TIME:
0.152919
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 8, in <module>
    d = r*acos(sen(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
NameError: name 'sen' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:37:30) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
-- EXECUTION TIME:
0.150846
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 8, in <module>
    d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
AttributeError: 'float' object has no attribute 'sin'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:37:31) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
-- EXECUTION TIME:
0.141409
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 8, in <module>
    d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
AttributeError: 'float' object has no attribute 'sin'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:37:32) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
-- EXECUTION TIME:
0.128825
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 8, in <module>
    d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
AttributeError: 'float' object has no attribute 'sin'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:37:33) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
-- EXECUTION TIME:
0.121947
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 8, in <module>
    d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
AttributeError: 'float' object has no attribute 'sin'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:37:33) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
-- EXECUTION TIME:
0.19646
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 8, in <module>
    d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
AttributeError: 'float' object has no attribute 'sin'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 22:37:36) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
AttributeError: 'float' object has no attribute 'sin'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:38:19) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(d)
-- EXECUTION TIME:
0.173364
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 8, in <module>
    d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
AttributeError: 'float' object has no attribute 'sin'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:38:20) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(d)
-- EXECUTION TIME:
0.16394
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 8, in <module>
    d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
AttributeError: 'float' object has no attribute 'sin'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 22:38:20) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
AttributeError: 'float' object has no attribute 'sin'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:40:02) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.136169
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:40:03) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1)).sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.209549
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:40:48) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.193296
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:40:48) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.124688
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:12) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.142034
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:14) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.197602
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:15) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.183835
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:15) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.114323
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:15) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.161322
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:15) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.139893
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:16) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.145442
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:16) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.159242
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:16) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.101716
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:16) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.295928
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:16) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.114521
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:16) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.103347
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:17) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.143707
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:17) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.113945
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:17) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.0958998
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:17) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.209635
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:17) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.112587
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:18) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.137162
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:18) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.103543
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:18) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.145019
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:18) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.193299
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:18) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.114414
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:19) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.098726
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:19) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.159399
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:19) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.110046
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:19) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.174994
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:20) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.119169
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:23) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.163213
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 22:42:24) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- ERROR:
File "XXXX", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:31) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2))
-- EXECUTION TIME:
0.186127
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
-8963.03
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:33) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2))
-- EXECUTION TIME:
0.128151
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
-8963.03
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 22:42:33) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2))
-- OUTPUT:
-8963.03
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:42:38) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2))
-- EXECUTION TIME:
0.146659
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
-8963.03
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:43:30) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2))
-- EXECUTION TIME:
0.184461
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
-8963.03
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:44:04) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2))
-- EXECUTION TIME:
0.186721
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
-8963.03
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:44:24) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2))
-- EXECUTION TIME:
0.154061
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
-556.38
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:44:26) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2))
-- EXECUTION TIME:
0.146142
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
-556.38
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:45:07) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.145445
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 8
    d = r*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
                                                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:45:38) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos*(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2))
-- EXECUTION TIME:
0.190868
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 8, in <module>
    d = r*acos*(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:45:45) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos((sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2))
-- EXECUTION TIME:
0.20196
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 9
    print(round(d,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:45:47) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos((sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.142055
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:46:36) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos((sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.148684
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
7925.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:46:37) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos((sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.215786
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
7925.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:46:38) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos((sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.128771
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
7925.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:47:04) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos((sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.213318
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 22:47:28) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos((sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.168461
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:12:17) 
-- CODE:
from math import*
r = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))

d = r*acos((sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.160276
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
